force-app/main/default/objects/Quote_Ship_To__c/Quote_Ship_To__c.object-meta.xml
<CustomObject>
    <label>Quote Ship To</label>
    <nameField>
        <displayFormat>QS-{00000}</displayFormat>
        <label>Quote Ship To Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Ship Tos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>