force-app/main/default/objects/Quote_Ship_To__c/fields/PROS_Quote__c.field-meta.xml
<CustomField>
    <fullName>PROS_Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>CameleonCPQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Ship To&#39;s</relationshipLabel>
    <relationshipName>Quote_Ship_Tos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>