force-app/main/default/objects/Quote_Ship_To__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Quote Ship To&#39;s</relationshipLabel>
    <relationshipName>Quote_Ship_Tos</relationshipName>
    <type>Lookup</type>
</CustomField>