force-app/main/default/objects/Quote_Ship_To__c/fields/Ship_To_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Default_Currency__c</fullName>
    <formula>Ship_To__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Currency</label>
    <type>Text</type>
</CustomField>