force-app/main/default/objects/Quote_Ship_To__c/fields/Ship_To_Description__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Description__c</fullName>
    <formula>Ship_To__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>