force-app/main/default/objects/Quote_Ship_To__c/fields/Ship_TO_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_TO_ERP_Number__c</fullName>
    <formula>Ship_To__r.ERP_Number__c</formula>
    <label>ERP  Number</label>
    <type>Text</type>
</CustomField>