force-app/main/default/objects/Quote_Ship_To__c/fields/Ship_To_Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Legacy_System__c</fullName>
    <formula>text(Ship_To__r.Legacy_System__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy System</label>
    <type>Text</type>
</CustomField>